thepphuongloan/wp-content/themes/thep/style_long.css
/* ... */
#sidebar .widget .widget-top .stripe-line{
	display: none;
}
div.widget-top{
	padding: 0px;
}
#sidebar div.widget-container{
	background: #d4d4d4;
    /*margin-bottom: 16px;*/
    /*padding: 0px 0px 3px;*/
	padding: 5px 20px;
}
.module_title .module_icon{
	position: absolute;
    background: url(images/tpl/box_title_icon.png) no-repeat 0px 0px;
    width: 16px;
    height: 31px;
    top: 2px;
    left: 0px;
}
.module_content ul li, div.widget div.widget-container ul li{
	margin: 0 0 0px 0;
    padding: 2px 0px 0px 0px !important;
    background: url(images/tpl/menu_hr.gif) repeat-x center top;
}
div.widget div.widget-container ul li:first-child{
	padding-top: 0px;
	background: none;
}
div.widget div.widget-container ul li a{
	display: block;
    padding: 6px 0px 6px 0px;
    color: #000000;
    font-weight: bold;
}
.widget_categories .widget-container li:before, .widget_product_categories ul li:before{
	content: none;
}
.widget-top h4::before{
  content: url(images/tpl/box_title_icon.png);
  position: absolute; /*or absolute*/
  z-index: 100000; /*a number that's more than the modal box*/
  width: 16px;
  height: 31px;
  top: 2px;
  left: 0px;
}
div.widget div.widget-container ul li.current-cat a{
	/*text-decoration: underline;*/
	color: blue;
	font-style: italic;
}
div.post-inner.inside ul li > div{
	display: none;
}
div.post-inner.inside ul.products li.product{
	width: 30%;
    /*float: left;*/
}
div.post-inner.inside ul.products h3 {
    font-size: 10px;
    font-style: italic;
}

/* FOR NEWS */
div#breaking-news{
	height: 30px;
}
.breaking-news ul{
    /*margin-top: 10px;*/
    background: #ffffff;
    height: 30ppx;
    /*padding: 6px 0px;*/
    position: relative;
    border-left: 4px solid #feba01;
    position: relative;
}
.breaking-news ul a{
	display: block;
    float: left;
    margin: 0;
    font-size: 12px;
    /*padding: 0px 0px 0px 10px;*/
    padding-left: 10px;
    white-space: nowrap;
    color: #000;
    background: url(images/tpl/menu_icon.gif) no-repeat 0px 14px;
    margin-left: 20px;
}
div#breaking-news span.breaking-news-title{
	display: none;
}

/* FOR MODULE CATEGORY NEWS*/
#sidebar div.widget.arpw-widget-random div.widget-container{
	padding: 5px 10px;
}
div.widget.arpw-widget-random div.widget-container img.wp-post-image{
	width: 72px;
	height: 50px;
	margin: 5px 5px 5px 0px;
}
div.widget.arpw-widget-random div.widget-container li{
	padding: 5px !important;
}
div.widget.arpw-widget-random div.widget-container a{
	padding: 0px;
	font-weight: normal;
	font-size: 11px;
}

/* FOR CONTENT IN MAIN CLIENT */
div.cat-box-title h2 a{
	color: #dc1206;
    font-size: 14px;
    height: 18px;
    font-weight: bold;
    float: left;
    background: #ffffff;
    padding-right: 12px;
    text-transform: uppercase;
    margin-bottom: 20px;
    width: 100%;
}
div.cat-box-title div.stripe-line{
	background: url(images/tpl/mid_title.gif) repeat-x left bottom;
    height: 14px;
    margin-top: 0px;
}
div.cat-box-content li.first-news{
    display: none;
}
div.content div.cat-box-content{
    box-shadow: none;
}
div.cat-box-content li.other-news{
    float: left;
    width: 46%;
    border: 2px solid #dbdbdb;
    border-top: none;
    border-right: none;
    margin: 10px 10px 20px 0px;
    height: 100px;
}
div.cat-box-content li.other-news a{
	color: #003686;
}
div.cat-box-content li.other-news h3{
	color: #003686;
}

/* FOR SINGLE PRODUCT PAGE */
div.content nav.woocommerce-breadcrumb{
	display: none;
}

/* FOR PRODUCT CATEGORY DETAIL */
div.content div.post-inner h1.page-title{
	color: #dc1206;
    font-size: 14px;
    height: 18px;
    font-weight: bold;
    float: left;
    background: url(images/tpl/mid_title.gif)  repeat-x left bottom;;
    padding-right: 12px;
    text-transform: uppercase;
    margin-bottom: 20px;
    width: 100%;
}
div.post-inner div.left-content{
	float: left;
	width: 100%;
	padding: 5px;
}
div.post-inner div.pro-cat-gallery{
	float: right;
	width: 50%;
	padding: 5px;
	text-align: center;
}
div.post-inner div.pro-cat-gallery div.big-thum{
	max-width: 300px;
	max-height: 250px;
	border: 1px solid #cccccc;
}
div.post-inner div.pro-cat-gallery div.small-thums{
	text-align: center;
}
div.post-inner div.pro-cat-gallery div.small-thum{
	display: inline-block;
    margin: 5px;
    margin-bottom: 10px;
    float: left;
    width: 89px;
    text-align: center;
    color: #000000;
    border: 1px solid #cccccc;
}
div.post-inner p.woocommerce-result-count{
	display: none;
}
div.post-inner form{
	display: none;
}
div.post-inner ul.products{
	margin-bottom: 15px;
}
div.post-inner ul.products li.product{
	width: 45%;
	padding: 10px 0px 20px;
	margin-bottom: 0px;
}
div.post-inner ul.products li.product a.button{
	display: none;
}
div.post-inner ul.products  h3 {
    font-size: 12px;
    margin: 0px 0px 7px;
    text-transform: uppercase;
    color: #003686;
    font-weight: bold;
}
div.post-inner ul.products div.product-img{
    float: left;
    margin-right: 15px;
    text-align: center;
    padding: 2px;
    border: 1px solid #cccccc;
}
div.post-inner ul.products div.product-img img{
	width: 90px;
	height: 70px;
}
div.other-pro-cats{
	width: 80%;
}

/* FOR SHORTCODE OTHER PRODUCT CATEGORIES*/
div.other-pro-cats span.other-cat-name a{
	color: #ff0000;
	font-weight: bold;
	text-transform: uppercase;
	text-decoration: underline;
}

/* FOR SHORTCODE CONTACT BUTTON*/
div.btn_contact a {
    display: inline-block;
    background: url(images/tpl/btn_contact_pro.png) no-repeat left top;
    height: 35px;
    line-height: 33px;
    padding-left: 15px;
    color: #000000;
    font-weight: bold;
}
div.btn_contact a span {
    display: inline-block;
    background: url(images/tpl/btn_contact_pro.png) no-repeat right -36px;
    height: 35px;
    padding-right: 29px;
}
/* ... */

